--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -195,12 +195,10 @@ Figure~\ref{fig:multi_GPU_flow} summarizes the time advancement steps for one or
 Our initial implementation of RBF-FD on multiple GPUs (\cite{BolligFlyerErlebacher2012}) tested two approaches to compute derivatives within \texttt{Apply Weights}. 
 In both cases, the stencil weights are stored in  
 a packed one-dimensional array in global memory with $N*n$ nonzeros and all the weights 
-for a single stencil (i.e., an entire row) stored in consecutive memory locations. The one-dimensional array of weights is indexed by two arrays. The first array contains $N$ integer offsets used to jump to the first nonzero of each row. The second array contains $N*n$ integers representing the column index for each nonzero. This sparse compression is equivalent to the \emph{Compressed Row Storage} (CSR) format in \cite{Bell2009, Rupp2010, Cusp2012}.
-
-Each derivative operator is stored as an independent CSR matrix with independent indexing. 
+for a single stencil (i.e., an entire row) stored in consecutive memory locations. The one-dimensional array of weights is indexed by two arrays. The first array contains $N$ integer offsets used to jump to the first nonzero of each row. The second array contains $N*n$ integers representing the column index for each nonzero. This sparse compression is equivalent to the \emph{Compressed Row Storage} (CSR) format in \cite{Bell2009, Rupp2010, Cusp2012}. Each derivative operator is stored as an independent CSR matrix with independent indexing. 
 
 %In general, sparse matrices have nonzeros randomly scattered throughout each row. A structured matrix has nonzeros distributed at regular intervals with neighboring rows. 
-In general nonzeros in a row can be regularly or irregularly spaced at intervals, but are rarely all consecutive. When the sparse matrix is compressed into CSR format, each row is condensed into a packed vector with consecutive nonzeros that can be easily loaded from memory in a few transactions and then operated on sequentially. Unfortunately, the packed vector must still be multiplied against the proper elements of the solution vector. Operating sequentially on the packed weights implies that the elements of the solution vector are accessed according to the original spacing between nonzeros of the uncompressed sparse matrix. As In other words, the solution vector is in general random access. 
+In general nonzeros in a row can be regularly or irregularly spaced at intervals, but are rarely all consecutive. When the sparse matrix is compressed into CSR format, the packed vector with consecutive nonzeros for each row is easily loaded from memory in a few transactions and then operated on sequentially. Unfortunately, the weights must still be multiplied against the proper elements of the solution vector. Operating sequentially on the packed weights implies that the elements of the solution vector are loaded following the original (potentially irregular) spacing between nonzeros in the uncompressed sparse matrix. From the perspective of a single row the solution vector is random access. It is not uncommon for the L1 cache to pull in a 128-byte-wide cache line that contains only one or two values that will be used by a single row. %Node ordering can improve sparse structure can be improved to ensure more solution values per cache line are used by 
   % WHAT DOES THIS MEAN: treated as random access?
 
 %All the computation on the GPU is performed in 8-byte double precision. 
