--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -198,7 +198,7 @@ a packed one-dimensional array in global memory with $N*n$ nonzeros and all the 
 for a single stencil (i.e., an entire row) stored in consecutive memory locations. The one-dimensional array of weights is indexed by two arrays. The first array contains $N$ integer offsets used to jump to the first nonzero of each row. The second array contains $N*n$ integers representing the column index for each nonzero. This sparse compression is equivalent to the \emph{Compressed Row Storage} (CSR) format in \cite{Bell2009, Rupp2010, Cusp2012}. Each derivative operator is stored as an independent CSR matrix with independent indexing. 
 
 
-In general nonzeros in a row can be regularly or irregularly spaced at intervals, but are rarely all consecutive. When the sparse matrix is compressed into CSR format, the packed vector with consecutive nonzeros for each row is easily loaded from memory in a few transactions and then operated on sequentially. Unfortunately, the weights must still be multiplied against the proper elements of the solution vector. From the perspective of a single row the solution vector is random access as operating sequentially on the packed weights implies that the elements of the solution vector are loaded following the irregular spacing between nonzeros in the uncompressed sparse matrix. It is not uncommon for the L1 cache on the GPU to pull in a 128-byte-wide cache line that contains only one or two values that are used by a single row. When this occurs, one hopes that subsequent rows will make use of the cache line before it is evicted. Node ordering can improve the structure of sparse matrices and increase cache utilization to an extent, but it is not always possible to avoid evictions. 
+In general nonzeros in a row are irregularly spaced at intervals, but are rarely all consecutive. When the sparse matrix is compressed into CSR format, the packed vector with consecutive nonzeros for each row is easily loaded from memory in a few transactions and then operated on sequentially. Unfortunately, the weights must still be multiplied against the proper elements of the solution vector. From the perspective of a single row the solution vector is random access. That is, operating sequentially on the packed weights implies that the elements of the solution vector are loaded following the irregular spacing between nonzeros in the uncompressed sparse matrix. It is not uncommon for the L1 cache on the GPU to pull in a 128-byte-wide cache line that contains only one or two values that are used by a single row. When this occurs, one hopes that subsequent rows will make use of the cache line before it is evicted. Node ordering can improve the structure of sparse matrices and increase cache utilization to an extent, but it is not always possible to avoid evictions. 
 
 
 \subsection{Naive Approach: One thread per stencil}
